Mark foregroundLayer under scrollingContentsLayer GraphicsLayerPaintOverflowContents

Missing the flag made contents of foregroundLayer under
scrollingContentsLayer incorrectly applied overflow clip, causing
checkboarding during composited scrolling.

BUG=599682

Review URL: https://codereview.chromium.org/1895443003

Cr-Commit-Position: refs/heads/master@{#388000}

Former-commit-id: 9b8e5d585a1a1f61b7afee8353e346f7764cecd2